--- a/Frontend/css/style.css
+++ b/Frontend/css/style.css
@@ -1,10 +1,17 @@
-footer {
-  position: center;
+body {
+  margin: 0;
+  padding-bottom: 60px; /* Platz für Footer */
+}
+
+
+.custom-footer {
+  position: fixed;
+  bottom: 0;
   width: 100%;
-    position: fixed;
-    bottom: 0;
-    text-align: center;
-    padding: 3px;
-    background-color: DarkSalmon;
-    color: white;
-  }
+  background-color: #ffa07a; /* DarkSalmon */
+  text-align: center;
+  padding: 10px;
+  color: black;
+  z-index: 1000;
+  box-shadow: 0 -2px 5px rgba(0,0,0,0.1);
+}
