--- a/Frontend/components/navbar.html
+++ b/Frontend/components/navbar.html
@@ -10,6 +10,7 @@
                 <li class="nav-item"><a class="nav-link" href="index.html">Startseite</a></li>
                 <li class="nav-item"><a class="nav-link active" href="sites/products.html">Produkte</a></li>
                 <li class="nav-item"><a class="nav-link" href="sites/cart.html">Warenkorb</a></li>
+                <li class="nav-item"><a class="nav-link" href="sites/register.html">Register</a></li>
             </ul>
         </div>
         <a href="sites/cart.html" class="position-relative">
