Login-Session-Handling

--- a/Frontend/css/style.css
+++ b/Frontend/css/style.css
@@ -8,7 +8,7 @@ body {
   position: fixed;
   bottom: 0;
   width: 100%;
-  background-color: #ffa07a; /* DarkSalmon */
+  background-color: #ededed; /* DarkSalmon */
   text-align: center;
   padding: 10px;
   color: black;
