--- a/Frontend/components/navbar.html
+++ b/Frontend/components/navbar.html
@@ -1,19 +1,17 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-        <a class="navbar-brand" href="index.html">🌿 Blattwerk</a>
+        <a class="navbar-brand" href="./index.html">🌿 Blattwerk</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Menü">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
+            <!-- Dynamisch gefüllte Navigation -->
             <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link" href="index.html">Startseite</a></li>
-                <li class="nav-item"><a class="nav-link active" href="sites/products.html">Produkte</a></li>
-                <li class="nav-item"><a class="nav-link" href="sites/cart.html">Warenkorb</a></li>
-                <li class="nav-item"><a class="nav-link" href="sites/register.html">Register</a></li>
+                <!-- Wird durch layout.js ersetzt -->
             </ul>
         </div>
-        <a href="sites/cart.html" class="position-relative">
+        <a href="./sites/cart.html" class="position-relative">
             🛒
             <span id="cart-count" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
                 0
